objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <description>This object will contain all informations about the hotel reservation.</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>