objects/Reservation__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>This field will contain the date of arrival time.</description>
    <label>Arrival Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>