objects/Reservation__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>This field will contain the customer&#39;s billing address.</description>
    <formula>IF(Reserved_By__r.Billing_Address_Is_The_Same__c = true , Reserved_By__r.Address__c, NULL)</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>