objects/Reservation__c/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <description>This field will contain the customer&#39;s billing zip code.</description>
    <formula>IF(Reserved_By__r.Billing_Address_Is_The_Same__c = true, Reserved_By__r.Zip_Code__c, NULL)</formula>
    <label>Billing Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>