objects/Reservation__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>This field will contain the date of departure.</description>
    <label>Departure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>