objects/Reservation__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field will contain the name of the specified hotel.</description>
    <label>Hotel Name</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>