objects/Reservation__c/fields/Reserved_By__c.field-meta.xml
<CustomField>
    <fullName>Reserved_By__c</fullName>
    <description>This field will contain the name of the customer who make reservation.</description>
    <label>Reserved By</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>