objects/Reservation__c/fields/Source_of_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Reservation__c</fullName>
    <description>This field contains the list  about the source of reservation.</description>
    <label>Source of Reservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Walk in</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>