objects/Reservation__c/fields/Total_Amount_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Payment__c</fullName>
    <description>This formula will calculate the total amount of payment.</description>
    <formula>Type_of_Room__r.Price__c * Number_of_Nights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>