objects/Reservation__c/fields/Type_of_Room__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Room__c</fullName>
    <description>This field will contain the specified room type.</description>
    <label>Type of Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>